--- a/Styles/nicepage.css
+++ b/Styles/nicepage.css
@@ -1,4 +1,4 @@
-/*begin-commonstyles library*//*!
+begin-commonstyles library/*!
  * froala_editor v4.0.6 (https://www.froala.com/wysiwyg-editor)
  * License https://froala.com/wysiwyg-editor/terms/
  * Copyright 2014-2021 Froala Labs
@@ -34960,5 +34960,3 @@ html { font-size: 16px; }
     left: 21vw !important;
   }
 }
-
-
