--- a/Styles/Home.css
+++ b/Styles/Home.css
@@ -1333,3 +1333,11 @@
   }
   
 }
+
+.back-to-top {
+    position: fixed;
+    bottom: 25px;
+    right: 25px;
+    display: none;
+ border-radius:1000px;
+}
