--- a/Styles/Home.css
+++ b/Styles/Home.css
@@ -1339,9 +1339,36 @@
     bottom: 25px;
     right: 25px;
     display: none;
- border-radius:1000px;
+    border-radius:100%;
 }
 .contactus_gradient{
   background-image: linear-gradient(#e5e5e5, #0D6EFD);
 }
 
+.preloaderlayer{
+  height: 100vh;
+  width: 100vw;
+  background-color: white;
+  z-index: 50;
+}
+
+.preloader{
+  background: rgb(255, 255, 255) url(../images/logo.jpg) no-repeat center;
+  background-size: 15%;
+  position: fixed;
+  height: 100vh;
+  width: 100%;
+  z-index: 100;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
+}
+
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotatey(0deg); }
+  100% { -webkit-transform: rotatey(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotatey(0deg); }
+  100% { transform: rotatey(360deg); }
+}
