--- a/Styles/Home.css
+++ b/Styles/Home.css
@@ -20,13 +20,14 @@
 }
 
 .u-section-1 .u-text-1 {
-  text-transform: uppercase;
   letter-spacing: 4px;
   font-weight: 300;
-  margin: 0;
+  margin-top: 50px;
+  margin-left: 5px;
 }
 
 .u-section-1 .u-text-2 {
+  text-transform: uppercase;
   font-size: 4.5rem;
   font-family: "Bai Jamjuree";
   margin: 20px 0 0;
