--- a/Styles/Global.css
+++ b/Styles/Global.css
@@ -56,16 +56,16 @@
   height: 100vh;
   width: 100%;
   z-index: 150;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   /* -webkit-animation: spin 2s linear infinite;
   animation: spin 2s linear infinite; */
 }
 .preloader-image{
+  animation: logoloader 5s infinite ease-in-out;
   height: 500px;
   width: 500px;
-  position: relative;
-  animation: logoloader 3s infinite;
-  top: 20vh;
-  left: 32vw;
 }
 
 
