--- a/Styles/Global.css
+++ b/Styles/Global.css
@@ -1,3 +1,7 @@
+body{
+  overflow-x: hidden;
+}
+
 @media (max-width: 990px) {
   .toMakeTextResponsive {
     font-size: xx-large !important;
@@ -48,13 +52,15 @@
   z-index: 120;
   position: sticky;
   top: 0;
+  overflow-y: hidden;
+  overflow-x: hidden;
 }
 .preloader{
   /* background: rgb(255, 255, 255) url(../images/logo.jpg) no-repeat center; */
   /* background-size: 15%; */
   position: fixed;
   height: 100vh;
-  width: 100%;
+  width: 100vw;
   z-index: 150;
   display: flex;
   justify-content: center;
