--- a/Styles/Global.css
+++ b/Styles/Global.css
@@ -33,7 +33,7 @@ body{
 .fixedposition{ 
   /* overflow: hidden; */
   background-color: #f1f6f6;
-  position: sticky;
+  position: fixed;
   top: 0;
   width: 100%;
   z-index: 100;
@@ -49,11 +49,11 @@ body{
   height: 150vh;
   width: 100vw;
   background-color: white;
-  z-index: 120;
-  position: sticky;
-  top: 0;
+  z-index: 140;
   overflow-y: hidden;
   overflow-x: hidden;
+  position: fixed;
+  top: 0%;
 }
 .preloader{
   /* background: rgb(255, 255, 255) url(../images/logo.jpg) no-repeat center; */
