--- a/Styles/Global.css
+++ b/Styles/Global.css
@@ -30,21 +30,6 @@ body{
   text-decoration: none; 
 }
 
-.fixedposition{ 
-  /* overflow: hidden; */
-  background-color: #f1f6f6;
-  position: fixed;
-  top: 0;
-  width: 100%;
-  z-index: 100;
-}
-
-
-.positioninbetween {
-  position: relative;
-  top: -12px;
-}
-
 .preloaderlayer{
   height: 150vh;
   width: 100vw;
@@ -68,6 +53,23 @@ body{
   /* -webkit-animation: spin 2s linear infinite;
   animation: spin 2s linear infinite; */
 }
+
+/* if i use position sticky it stops working  */
+.fixedposition{ 
+  /* overflow: hidden; */
+  position: fixed;
+  top: 0%;
+  background-color: rgb(241, 246, 246, 0.8);
+  ;
+  width: 100%;
+  z-index: 100;
+}
+
+.positioninbetween {
+  position: relative;
+  top: -12px;
+}
+
 .preloader-image{
   animation: logoloader 5s infinite ease-in-out;
   height: 500px;
