--- a/Styles/Home.css
+++ b/Styles/Home.css
@@ -1,4 +1,5 @@
  .u-section-1 {
+   /* margin-top: 96px; */
   /* background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2)), url("../images/home_bg_top.jpg"); */
   background-position: 50% 50%;
 }
@@ -54,6 +55,7 @@
   line-height: 1.7;
   font-weight: 300;
   margin: 0;
+  padding-top: 50px;
 }
 
 .u-section-1 .u-btn-1 {
@@ -160,6 +162,7 @@
     min-height: 105px;
   }
 } .u-section-2 {
+  padding-top: 25px;
   background-image: none;
 }
 
