--- a/Styles/Global.css
+++ b/Styles/Global.css
@@ -99,3 +99,10 @@ body{
     transform: scale(0.0);
   }
 }
+.text-left-mobileview{
+  text-align: left !important;
+}
+.text-left-mobileview-padding{
+  padding-left: 20px;
+}
+
