--- a/Styles/Home.css
+++ b/Styles/Home.css
@@ -1353,7 +1353,7 @@
 /* ************************************** */
 
    .carousel_img {
-    height: 60vh;
+    /* height: 60vh; */
     width: 100%;
    }
 
