changes color scheme

--- a/CSS-libraries/nicepage.css
+++ b/CSS-libraries/nicepage.css
@@ -20284,12 +20284,12 @@ a.u-link.u-hover-color-1-dark-1:hover {
 .u-container-layout.u-color-1:before,
 .u-table-alt-color-1 tr:nth-child(even) {
   color: #ffffff;
-  background-color: #e84a90;
+  background-color: #7EC8E3;
 }
 .u-button-style.u-color-1,
 .u-button-style.u-color-1[class*="u-border-"] {
   color: #ffffff !important;
-  background-color: #e84a90 !important;
+  background-color: #7EC8E3 !important;
 }
 .u-button-style.u-color-1:hover,
 .u-button-style.u-color-1[class*="u-border-"]:hover,
@@ -20325,10 +20325,10 @@ a.u-button-style.u-button-style.active > .u-active-color-1[class*="u-border-"],
 li.active > a.u-button-style.u-button-style.u-active-color-1,
 li.active > a.u-button-style.u-button-style.u-active-color-1[class*="u-border-"] {
   color: #ffffff !important;
-  background-color: #e84a90 !important;
+  background-color: #7EC8E3 !important;
 }
 a.u-link.u-hover-color-1:hover {
-  color: #e84a90 !important;
+  color: #7EC8E3 !important;
 }
 .u-color-1-light-1,
 .u-body.u-color-1-light-1,
@@ -20496,12 +20496,12 @@ a.u-link.u-hover-color-1-light-3:hover {
 .u-container-layout.u-color-1-base:before,
 .u-table-alt-color-1-base tr:nth-child(even) {
   color: #ffffff;
-  background-color: #e84a90;
+  background-color: #7EC8E3;
 }
 .u-button-style.u-color-1-base,
 .u-button-style.u-color-1-base[class*="u-border-"] {
   color: #ffffff !important;
-  background-color: #e84a90 !important;
+  background-color: #7EC8E3 !important;
 }
 .u-button-style.u-color-1-base:hover,
 .u-button-style.u-color-1-base[class*="u-border-"]:hover,
@@ -20537,10 +20537,10 @@ a.u-button-style.u-button-style.active > .u-active-color-1-base[class*="u-border
 li.active > a.u-button-style.u-button-style.u-active-color-1-base,
 li.active > a.u-button-style.u-button-style.u-active-color-1-base[class*="u-border-"] {
   color: #ffffff !important;
-  background-color: #e84a90 !important;
+  background-color: #7EC8E3 !important;
 }
 a.u-link.u-hover-color-1-base:hover {
-  color: #e84a90 !important;
+  color: #7EC8E3 !important;
 }
 .u-color-2-dark-3,
 .u-body.u-color-2-dark-3,
@@ -22404,12 +22404,12 @@ a.u-link.u-hover-palette-1-dark-1:hover {
 .u-container-layout.u-palette-1:before,
 .u-table-alt-palette-1 tr:nth-child(even) {
   color: #ffffff;
-  background-color: #e84a90;
+  background-color: #7EC8E3;
 }
 .u-button-style.u-palette-1,
 .u-button-style.u-palette-1[class*="u-border-"] {
   color: #ffffff !important;
-  background-color: #e84a90 !important;
+  background-color: #7EC8E3 !important;
 }
 .u-button-style.u-palette-1:hover,
 .u-button-style.u-palette-1[class*="u-border-"]:hover,
@@ -22445,10 +22445,10 @@ a.u-button-style.u-button-style.active > .u-active-palette-1[class*="u-border-"]
 li.active > a.u-button-style.u-button-style.u-active-palette-1,
 li.active > a.u-button-style.u-button-style.u-active-palette-1[class*="u-border-"] {
   color: #ffffff !important;
-  background-color: #e84a90 !important;
+  background-color: #7EC8E3 !important;
 }
 a.u-link.u-hover-palette-1:hover {
-  color: #e84a90 !important;
+  color: #7EC8E3 !important;
 }
 .u-palette-1-light-1,
 .u-body.u-palette-1-light-1,
@@ -22616,12 +22616,12 @@ a.u-link.u-hover-palette-1-light-3:hover {
 .u-container-layout.u-palette-1-base:before,
 .u-table-alt-palette-1-base tr:nth-child(even) {
   color: #ffffff;
-  background-color: #e84a90;
+  background-color: #7EC8E3;
 }
 .u-button-style.u-palette-1-base,
 .u-button-style.u-palette-1-base[class*="u-border-"] {
   color: #ffffff !important;
-  background-color: #e84a90 !important;
+  background-color: #7EC8E3 !important;
 }
 .u-button-style.u-palette-1-base:hover,
 .u-button-style.u-palette-1-base[class*="u-border-"]:hover,
@@ -22634,7 +22634,7 @@ a.u-link.u-hover-palette-1-light-3:hover {
 li.active > .u-button-style.u-button-style.u-palette-1-base,
 li.active > .u-button-style.u-button-style.u-palette-1-base[class*="u-border-"] {
   color: #ffffff !important;
-  background-color: #e52f7f !important;
+  background-color: #2b1fd1 !important;
 }
 .u-hover-palette-1-base:hover,
 .u-hover-palette-1-base[class*="u-border-"]:hover,
@@ -22657,10 +22657,10 @@ a.u-button-style.u-button-style.active > .u-active-palette-1-base[class*="u-bord
 li.active > a.u-button-style.u-button-style.u-active-palette-1-base,
 li.active > a.u-button-style.u-button-style.u-active-palette-1-base[class*="u-border-"] {
   color: #ffffff !important;
-  background-color: #e84a90 !important;
+  background-color: #7EC8E3 !important;
 }
 a.u-link.u-hover-palette-1-base:hover {
-  color: #e84a90 !important;
+  color: #7EC8E3 !important;
 }
 .u-palette-2-dark-3,
 .u-body.u-palette-2-dark-3,
@@ -25737,12 +25737,12 @@ li.active > a.u-button-style.u-button-style.u-border-active-color-1-dark-1 {
 }
 .u-border-color-1,
 .u-separator-color-1:after {
-  border-color: #e84a90;
-  stroke: #e84a90;
+  border-color: #7EC8E3;
+  stroke: #7EC8E3;
 }
 .u-button-style.u-border-color-1 {
-  border-color: #e84a90 !important;
-  color: #e84a90 !important;
+  border-color: #7EC8E3 !important;
+  color: #7EC8E3 !important;
   background-color: transparent !important;
 }
 .u-button-style.u-border-color-1:hover,
@@ -25761,11 +25761,11 @@ a.u-button-style.u-button-style.u-border-active-color-1:active,
 a.u-button-style.u-button-style.u-border-active-color-1.active,
 a.u-button-style.u-button-style.active > .u-border-active-color-1,
 li.active > a.u-button-style.u-button-style.u-border-active-color-1 {
-  color: #e84a90 !important;
-  border-color: #e84a90 !important;
+  color: #7EC8E3 !important;
+  border-color: #7EC8E3 !important;
 }
 .u-link.u-border-color-1[class*="u-border-"] {
-  border-color: #e84a90 !important;
+  border-color: #7EC8E3 !important;
 }
 .u-link.u-border-color-1[class*="u-border-"]:hover {
   border-color: #e52f7f !important;
@@ -25877,12 +25877,12 @@ li.active > a.u-button-style.u-button-style.u-border-active-color-1-light-3 {
 }
 .u-border-color-1-base,
 .u-separator-color-1-base:after {
-  border-color: #e84a90;
-  stroke: #e84a90;
+  border-color: #7EC8E3;
+  stroke: #7EC8E3;
 }
 .u-button-style.u-border-color-1-base {
-  border-color: #e84a90 !important;
-  color: #e84a90 !important;
+  border-color: #7EC8E3 !important;
+  color: #7EC8E3 !important;
   background-color: transparent !important;
 }
 .u-button-style.u-border-color-1-base:hover,
@@ -25901,11 +25901,11 @@ a.u-button-style.u-button-style.u-border-active-color-1-base:active,
 a.u-button-style.u-button-style.u-border-active-color-1-base.active,
 a.u-button-style.u-button-style.active > .u-border-active-color-1-base,
 li.active > a.u-button-style.u-button-style.u-border-active-color-1-base {
-  color: #e84a90 !important;
-  border-color: #e84a90 !important;
+  color: #7EC8E3 !important;
+  border-color: #7EC8E3 !important;
 }
 .u-link.u-border-color-1-base[class*="u-border-"] {
-  border-color: #e84a90 !important;
+  border-color: #7EC8E3 !important;
 }
 .u-link.u-border-color-1-base[class*="u-border-"]:hover {
   border-color: #e52f7f !important;
@@ -27137,12 +27137,12 @@ li.active > a.u-button-style.u-button-style.u-border-active-palette-1-dark-1 {
 }
 .u-border-palette-1,
 .u-separator-palette-1:after {
-  border-color: #e84a90;
-  stroke: #e84a90;
+  border-color: #7EC8E3;
+  stroke: #7EC8E3;
 }
 .u-button-style.u-border-palette-1 {
-  border-color: #e84a90 !important;
-  color: #e84a90 !important;
+  border-color: #7EC8E3 !important;
+  color: #7EC8E3 !important;
   background-color: transparent !important;
 }
 .u-button-style.u-border-palette-1:hover,
@@ -27161,11 +27161,11 @@ a.u-button-style.u-button-style.u-border-active-palette-1:active,
 a.u-button-style.u-button-style.u-border-active-palette-1.active,
 a.u-button-style.u-button-style.active > .u-border-active-palette-1,
 li.active > a.u-button-style.u-button-style.u-border-active-palette-1 {
-  color: #e84a90 !important;
-  border-color: #e84a90 !important;
+  color: #7EC8E3 !important;
+  border-color: #7EC8E3 !important;
 }
 .u-link.u-border-palette-1[class*="u-border-"] {
-  border-color: #e84a90 !important;
+  border-color: #7EC8E3 !important;
 }
 .u-link.u-border-palette-1[class*="u-border-"]:hover {
   border-color: #e52f7f !important;
@@ -27277,12 +27277,12 @@ li.active > a.u-button-style.u-button-style.u-border-active-palette-1-light-3 {
 }
 .u-border-palette-1-base,
 .u-separator-palette-1-base:after {
-  border-color: #e84a90;
-  stroke: #e84a90;
+  border-color: #7EC8E3;
+  stroke: #7EC8E3;
 }
 .u-button-style.u-border-palette-1-base {
-  border-color: #e84a90 !important;
-  color: #e84a90 !important;
+  border-color: #7EC8E3 !important;
+  color: #7EC8E3 !important;
   background-color: transparent !important;
 }
 .u-button-style.u-border-palette-1-base:hover,
@@ -27301,11 +27301,11 @@ a.u-button-style.u-button-style.u-border-active-palette-1-base:active,
 a.u-button-style.u-button-style.u-border-active-palette-1-base.active,
 a.u-button-style.u-button-style.active > .u-border-active-palette-1-base,
 li.active > a.u-button-style.u-button-style.u-border-active-palette-1-base {
-  color: #e84a90 !important;
-  border-color: #e84a90 !important;
+  color: #7EC8E3 !important;
+  border-color: #7EC8E3 !important;
 }
 .u-link.u-border-palette-1-base[class*="u-border-"] {
-  border-color: #e84a90 !important;
+  border-color: #7EC8E3 !important;
 }
 .u-link.u-border-palette-1-base[class*="u-border-"]:hover {
   border-color: #e52f7f !important;
@@ -29423,7 +29423,7 @@ a.u-link.u-text-hover-color-1-dark-1:hover {
 .u-text-color-1,
 a.u-button-style.u-text-color-1,
 a.u-button-style.u-text-color-1[class*="u-border-"] {
-  color: #e84a90 !important;
+  color: #7EC8E3 !important;
 }
 a.u-button-style.u-text-color-1:hover,
 a.u-button-style.u-text-color-1[class*="u-border-"]:hover,
@@ -29455,20 +29455,20 @@ a.u-button-style.u-button-style.active > .u-text-active-color-1[class*="u-border
 :not(.level-2) > .u-nav > .u-nav-item > a.u-nav-link.u-nav-link.u-text-active-color-1.active,
 .u-popupmenu-items.u-text-hover-color-1 .u-nav-link:hover,
 .u-popupmenu-items.u-popupmenu-items.u-text-active-color-1 .u-nav-link.active {
-  color: #e84a90 !important;
+  color: #7EC8E3 !important;
 }
 .u-text-color-1 .u-svg-link,
 .u-text-hover-color-1:hover .u-svg-link,
 .u-button-style:hover > .u-text-hover-color-1 .u-svg-link,
 .u-button-style.u-button-style.active > .u-text-active-color-1 .u-svg-link,
 .u-text-hover-color-1:focus .u-svg-link {
-  fill: #e84a90;
+  fill: #7EC8E3;
 }
 .u-link.u-text-color-1:hover {
   color: #e52f7f !important;
 }
 a.u-link.u-text-hover-color-1:hover {
-  color: #e84a90 !important;
+  color: #7EC8E3 !important;
 }
 .u-text-color-1-light-1,
 a.u-button-style.u-text-color-1-light-1,
@@ -29623,7 +29623,7 @@ a.u-link.u-text-hover-color-1-light-3:hover {
 .u-text-color-1-base,
 a.u-button-style.u-text-color-1-base,
 a.u-button-style.u-text-color-1-base[class*="u-border-"] {
-  color: #e84a90 !important;
+  color: #7EC8E3 !important;
 }
 a.u-button-style.u-text-color-1-base:hover,
 a.u-button-style.u-text-color-1-base[class*="u-border-"]:hover,
@@ -29655,20 +29655,20 @@ a.u-button-style.u-button-style.active > .u-text-active-color-1-base[class*="u-b
 :not(.level-2) > .u-nav > .u-nav-item > a.u-nav-link.u-nav-link.u-text-active-color-1-base.active,
 .u-popupmenu-items.u-text-hover-color-1-base .u-nav-link:hover,
 .u-popupmenu-items.u-popupmenu-items.u-text-active-color-1-base .u-nav-link.active {
-  color: #e84a90 !important;
+  color: #7EC8E3 !important;
 }
 .u-text-color-1-base .u-svg-link,
 .u-text-hover-color-1-base:hover .u-svg-link,
 .u-button-style:hover > .u-text-hover-color-1-base .u-svg-link,
 .u-button-style.u-button-style.active > .u-text-active-color-1-base .u-svg-link,
 .u-text-hover-color-1-base:focus .u-svg-link {
-  fill: #e84a90;
+  fill: #7EC8E3;
 }
 .u-link.u-text-color-1-base:hover {
   color: #e52f7f !important;
 }
 a.u-link.u-text-hover-color-1-base:hover {
-  color: #e84a90 !important;
+  color: #7EC8E3 !important;
 }
 .u-text-color-2-dark-3,
 a.u-button-style.u-text-color-2-dark-3,
@@ -31423,7 +31423,7 @@ a.u-link.u-text-hover-palette-1-dark-1:hover {
 .u-text-palette-1,
 a.u-button-style.u-text-palette-1,
 a.u-button-style.u-text-palette-1[class*="u-border-"] {
-  color: #e84a90 !important;
+  color: #7EC8E3 !important;
 }
 a.u-button-style.u-text-palette-1:hover,
 a.u-button-style.u-text-palette-1[class*="u-border-"]:hover,
@@ -31455,20 +31455,20 @@ a.u-button-style.u-button-style.active > .u-text-active-palette-1[class*="u-bord
 :not(.level-2) > .u-nav > .u-nav-item > a.u-nav-link.u-nav-link.u-text-active-palette-1.active,
 .u-popupmenu-items.u-text-hover-palette-1 .u-nav-link:hover,
 .u-popupmenu-items.u-popupmenu-items.u-text-active-palette-1 .u-nav-link.active {
-  color: #e84a90 !important;
+  color: #7EC8E3 !important;
 }
 .u-text-palette-1 .u-svg-link,
 .u-text-hover-palette-1:hover .u-svg-link,
 .u-button-style:hover > .u-text-hover-palette-1 .u-svg-link,
 .u-button-style.u-button-style.active > .u-text-active-palette-1 .u-svg-link,
 .u-text-hover-palette-1:focus .u-svg-link {
-  fill: #e84a90;
+  fill: #7EC8E3;
 }
 .u-link.u-text-palette-1:hover {
   color: #e52f7f !important;
 }
 a.u-link.u-text-hover-palette-1:hover {
-  color: #e84a90 !important;
+  color: #7EC8E3 !important;
 }
 .u-text-palette-1-light-1,
 a.u-button-style.u-text-palette-1-light-1,
@@ -31623,7 +31623,7 @@ a.u-link.u-text-hover-palette-1-light-3:hover {
 .u-text-palette-1-base,
 a.u-button-style.u-text-palette-1-base,
 a.u-button-style.u-text-palette-1-base[class*="u-border-"] {
-  color: #e84a90 !important;
+  color: #7EC8E3 !important;
 }
 a.u-button-style.u-text-palette-1-base:hover,
 a.u-button-style.u-text-palette-1-base[class*="u-border-"]:hover,
@@ -31655,20 +31655,20 @@ a.u-button-style.u-button-style.active > .u-text-active-palette-1-base[class*="u
 :not(.level-2) > .u-nav > .u-nav-item > a.u-nav-link.u-nav-link.u-text-active-palette-1-base.active,
 .u-popupmenu-items.u-text-hover-palette-1-base .u-nav-link:hover,
 .u-popupmenu-items.u-popupmenu-items.u-text-active-palette-1-base .u-nav-link.active {
-  color: #e84a90 !important;
+  color: #7EC8E3 !important;
 }
 .u-text-palette-1-base .u-svg-link,
 .u-text-hover-palette-1-base:hover .u-svg-link,
 .u-button-style:hover > .u-text-hover-palette-1-base .u-svg-link,
 .u-button-style.u-button-style.active > .u-text-active-palette-1-base .u-svg-link,
 .u-text-hover-palette-1-base:focus .u-svg-link {
-  fill: #e84a90;
+  fill: #7EC8E3;
 }
 .u-link.u-text-palette-1-base:hover {
   color: #e52f7f !important;
 }
 a.u-link.u-text-hover-palette-1-base:hover {
-  color: #e84a90 !important;
+  color: #7EC8E3 !important;
 }
 .u-text-palette-2-dark-3,
 a.u-button-style.u-text-palette-2-dark-3,
@@ -34678,7 +34678,7 @@ a.u-link.u-text-hover-grey-90:hover {
         .u-image:not(.u-shading) > .u-container-layout > a,
         a
         {
-        color: #e84a90;
+        color: #7EC8E3;
         }
         .u-overlap.u-overlap-transparent:not(.u-overlap-contrast) .u-header :not(.u-nav-item) > a:hover,
         .u-gradient > .u-container-layout > a:hover,
@@ -34692,7 +34692,7 @@ a.u-link.u-text-hover-grey-90:hover {
         .u-image:not(.u-shading) > .u-container-layout > .u-btn,
         .u-btn
         {
-        background-color: #e84a90;
+        background-color: #7EC8E3;
         color: #ffffff;
         }
         .u-overlap.u-overlap-transparent:not(.u-overlap-contrast) .u-header :not(.u-nav-item) > .u-btn:hover,
@@ -34724,7 +34724,7 @@ a.u-link.u-text-hover-grey-90:hover {
         .u-image:not(.u-shading) > .u-container-layout > blockquote,
         blockquote
         {
-        border-color: #e84a90;
+        border-color: #7EC8E3;
         }
         /** color-rules **/
 
@@ -34766,7 +34766,7 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-header .u-btn-1 {
-  background-image: linear-gradient(to right, #e84a90, #868bfa);
+  background-image: linear-gradient(to right, #7EC8E3, #868bfa);
   border-style: none;
   font-weight: 700;
   text-transform: uppercase;
@@ -34930,7 +34930,7 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 @media (min-width: 575px) {
   .alternative-color-1{
-    background-color: #e84a90;
+    background-color: #7EC8E3;
   }
   .alternative-color-2{
     background-color:#e5e5e5;  
