--- a/Styles/Global.css
+++ b/Styles/Global.css
@@ -105,4 +105,6 @@ body{
 .text-left-mobileview-padding{
   padding-left: 20px;
 }
-
+.bg-primary{
+  background-image: linear-gradient(#0d6efd, #4A8BC2);
+}
