--- a/CSS-libraries/nicepage.css
+++ b/CSS-libraries/nicepage.css
@@ -22616,12 +22616,12 @@ a.u-link.u-hover-palette-1-light-3:hover {
 .u-container-layout.u-palette-1-base:before,
 .u-table-alt-palette-1-base tr:nth-child(even) {
   color: #ffffff;
-  background-color: #7EC8E3;
+  background-color: #0d6efd;
 }
 .u-button-style.u-palette-1-base,
 .u-button-style.u-palette-1-base[class*="u-border-"] {
   color: #ffffff !important;
-  background-color: #7EC8E3 !important;
+  background-color: #2b1fd1 !important;
 }
 .u-button-style.u-palette-1-base:hover,
 .u-button-style.u-palette-1-base[class*="u-border-"]:hover,
@@ -22634,7 +22634,7 @@ a.u-link.u-hover-palette-1-light-3:hover {
 li.active > .u-button-style.u-button-style.u-palette-1-base,
 li.active > .u-button-style.u-button-style.u-palette-1-base[class*="u-border-"] {
   color: #ffffff !important;
-  background-color: #2b1fd1 !important;
+  background-color: #0d6efd !important;
 }
 .u-hover-palette-1-base:hover,
 .u-hover-palette-1-base[class*="u-border-"]:hover,
