improved service page images and spacing

--- a/Styles/Services.css
+++ b/Styles/Services.css
@@ -11,15 +11,15 @@
 .alt_bgcolor{
     background-color: whitesmoke;
     padding-top: 1px;
-    padding-bottom: 100px;
+    /* padding-bottom: 100px; */
 }
 .padding_rl{
     padding: 10px;
     /* border: solid 2px red; */
 }
-.margin_bottom{
+/* .margin_bottom{
     margin-bottom: 100px;
-}
+} */
 
 /* @media (max-width:580px) {
     .img_padding_mv{
