--- a/Styles/Index.css
+++ b/Styles/Index.css
@@ -1368,3 +1368,19 @@
     margin-top:0px;
   }   
   }
+
+
+#myVideo {
+  position: relative;
+  right: 4vw;
+}
+
+/* Add some content at the bottom of the video/page */
+.content {
+  position: fixed;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.5);
+  color: #f1f1f1;
+  width: 100%;
+  padding: 20px;
+}
