--- a/Styles/Index.css
+++ b/Styles/Index.css
@@ -1378,17 +1378,16 @@
   right: 4vw;
 }
 
-.content {
-  position: fixed;
-  bottom: 0;
-  background: rgba(0, 0, 0, 0.5);
-  color: #f1f1f1;
-  width: 100%;
-  padding: 20px;
-}
-
 @media (max-width: 1075px){
   #myVideo {
     right: 14vw;  
   }
+  .content {
+    position: absolute;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.5);
+    color: #f1f1f1;
+    width: 100%;
+    padding: 20px;
+  }  
 }
