--- a/Styles/Global.css
+++ b/Styles/Global.css
@@ -41,7 +41,7 @@ body{
   top: 0%;
 }
 .preloader{
-  /* background: rgb(255, 255, 255) url(../images/logo.jpg) no-repeat center; */
+  /* background: rgb(255, 255, 255) url(../images/logo.png) no-repeat center; */
   /* background-size: 15%; */
   position: fixed;
   height: 100vh;
