--- a/Styles/Global.css
+++ b/Styles/Global.css
@@ -69,12 +69,9 @@ body{
 }
 
 .preloader-image{
-  animation: logoloader 5s infinite ease-in-out;
-  height: 500px;
-  width: 500px;
+  /* animation: logoloader 5s infinite ease-in-out; */
+  width: 60px;
 }
-
-
 
 @-webkit-keyframes spin {
   0% { -webkit-transform: rotatey(0deg); }
