--- a/Styles/Global.css
+++ b/Styles/Global.css
@@ -103,3 +103,8 @@ body{
 .bg-primary{
   background-image: linear-gradient(#0d6efd, #4A8BC2);
 }
+
+.footer_img{
+  width: 85%;
+  height: auto;
+}
